# GTbot

./: .gitignore  gitignore  pyproject.toml  setup.cfg
gtbot/: __init__.py  __main__.py  loggers.py
gtbot/core/: action.py  bot.py  commands.py  dev.py  errors.py  player.py  team.py  trees.py
