[metadata]
name = GTBot
version = attr: gtbot.__version__
license = GPL-3.0
author = El Laggron
author_email = laggron42@gmail.com
description = GT Discord bot
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/retke/GTbot
project_urls =
    Discord server = https://discord.gg/xDJagdu
    Patreon = https://www.patreon.com/retke
    Issue Tracker = https://github.com/retke/GTbot/issues
    Source Code = https://github.com/retke/GTbot
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Framework :: AsyncIO
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Topic :: Communications :: Chat
    Topic :: Games/Entertainment

[options]
packages = find:
python_requires = >=3.9
install_requires =
    aiohttp==3.7.4.post0
    async-timeout==3.0.1
    attrs==21.2.0
    chardet==4.0.0
    colorama==0.4.4
    commonmark==0.9.1
    discord.py @ git+https://github.com/Rapptz/discord.py@45d498c1b76deaf3b394d17ccf56112fa691d160
    dislash.py @ git+https://github.com/EQUENOS/dislash.py.git@aafa2ca377394aec523c7102081bcfebd98a1e90
    idna==3.3
    multidict==5.2.0
    Pygments==2.10.0
    rich==10.15.2
    typing_extensions==4.0.1
    yarl==1.7.2

[options.packages.find]
include =
    gtbot